--- a/.github/workflows/main-deployment.yml
+++ b/.github/workflows/main-deployment.yml
@@ -1,34 +1,24 @@
-name: Push Main
+name: Deploy to Cloudflare Pages
+
 on:
-  pull_request:
-    branches:
-      - anhnt_dev
   push:
     branches:
-      - anhnt_dev
+      - main  # Hoặc tên branch bạn đang dùng
 
-jobs:
-  master:
-    if: "! startsWith(github.event.head_commit.message, '[CI Skip]')"
-    runs-on: ubuntu-22.04
-    name: Build and Deploy
+ jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      deployments: write
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Publish to Cloudflare Pages
+        uses: cloudflare/wrangler-action@v3
         with:
-          fetch-depth: 0
-      # === Build ===
-      # === Deploy static pages ===
-      - name: Deploy to Netlify
-        id: netlify_deployment
-        uses: nwtgck/actions-netlify@v2.0
-        with:
-          publish-dir: './docs'
-          alias: ${{ github.head_ref }}
-          github-token: ${{ secrets.GH_AUTOMATION_TOKEN }}
-          deploy-message: ${{ github.event.head_commit.message }}
-          enable-pull-request-comment: true
-          enable-commit-comment: true
-        env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-        timeout-minutes: 1
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          # LƯU Ý QUAN TRỌNG: Trỏ vào folder docs
+          command: pages deploy docs --project-name=worker
