--- a/.github/workflows/main-deployment.yml
+++ b/.github/workflows/main-deployment.yml
@@ -3,22 +3,21 @@ name: Deploy to Cloudflare Pages
 on:
   push:
     branches:
-      - main  # Hoặc tên branch bạn đang dùng1
+      - main
 
 jobs:
-deploy:
-  runs-on: ubuntu-latest
-  permissions:
-    contents: read
-    deployments: write
-  steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+  deploy:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      deployments: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Publish to Cloudflare Pages
-      uses: cloudflare/wrangler-action@v3
-      with:
-        apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-        accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-        # LƯU Ý QUAN TRỌNG: Trỏ vào folder docs
-        command: pages deploy docs --project-name=worker
+      - name: Publish to Cloudflare Pages
+        uses: cloudflare/wrangler-action@v3
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          command: pages deploy docs --project-name=subwallet-web
