--- a/.github/workflows/main-deployment.yml
+++ b/.github/workflows/main-deployment.yml
@@ -15,6 +15,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      # KHÔNG DÙNG npm install ở đây nếu bạn đã có sẵn file HTML trong folder docs
+
       - name: Publish to Cloudflare Pages
         uses: cloudflare/wrangler-action@v3
         with:
