--- a/.github/workflows/main-deployment.yml
+++ b/.github/workflows/main-deployment.yml
@@ -8,28 +8,21 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      deployments: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # KHÔNG DÙNG npm install ở đây nếu bạn đã có sẵn file HTML trong folder docs
-
-      - name: Publish to Cloudflare Pages
-        uses: cloudflare/wrangler-action@v3
-        with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}7
-          wranglerVersion: '3.90.0'
-          command: |
-            # 1. Di chuyển vào folder docs
-            cd docs
-            
-            # 2. Khởi tạo một file package rỗng bên trong docs để đánh lừa hệ thống
-            # Điều này ngăn Wrangler quét ngược ra ngoài thư mục gốc (nơi có iltorb lỗi)
-            echo '{}' > package.json
-            
-            # 3. Chạy lệnh deploy trực tiếp từ folder docs
-            npx wrangler pages deploy . --project-name=worker
+      - name: Deploy to Cloudflare Pages
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+        run: |
+          # 1. Di chuyển vào folder docs
+          cd docs
+          
+          # 2. Khởi tạo một file package rỗng bên trong docs để đánh lừa hệ thống
+          # Điều này ngăn Wrangler quét ngược ra ngoài thư mục gốc (nơi có iltorb lỗi)
+          echo '{}' > package.json
+          
+          # 3. Chạy lệnh deploy trực tiếp từ folder docs
+          npx wrangler pages deploy . --project-name=worker
